# content-sentiment-classifier

./: .env.example  .gitignore  Dockerfile  README.md  README_HF.md  docker-compose.yml  pyproject.toml  task-definition.json
app/: main.py  models.py
app/utils/: send_request.py  test_hf_space.sh
tests/: test_integration.py  test_unit.py
