[project]
name = "fin-text-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "uvicorn>=0.41.0",
]
